corrects api endpoints and spacing needs

--- a/app/assets/stylesheets/profiles/show.scss
+++ b/app/assets/stylesheets/profiles/show.scss
@@ -1,5 +1,5 @@
 .profile-header h2 {
-  font-family: Raleway;
+  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   text-align: center;
   margin: 5%;
   font-weight: 200;
@@ -9,11 +9,11 @@
 }
 
 .user-blurb {
-  font-family: Raleway;
+  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: 200;
   margin-left: 45%;
   margin-top: 12%;
   font-size: 36px;
-  background-color: #D9D9D9;
+  background-color: #84ABAA;
   padding-left: 20px;
 }
